--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -18,7 +18,11 @@ dependencies:
   cupertino_icons: ^1.0.0
 
   #firebase dep
-  firebase_core: "0.5.0"
+  firebase_core: "^0.5.3"
+  firebase_auth: "^0.18.4+1"
+
+  #flutter google fonts dep
+  google_fonts: ^1.1.1
 
 dev_dependencies:
   flutter_test:
