--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   #firebase dep
   firebase_core: "^0.5.3"
   firebase_auth: "^0.18.4+1"
+  cloud_firestore: "^0.14.4"
 
   #flutter google fonts dep
   google_fonts: ^1.1.1
